# GPGPUTasks2023

./: .gitignore  ANSWER.md  CMakeLists.txt
src/: main.cpp  main_aplusb.cpp  main_bitonic.cpp  main_mandelbrot.cpp  main_matrix_multiplication.cpp  main_matrix_transpose.cpp  main_merge.cpp  main_prefix_sum.cpp  main_radix.cpp  main_sum.cpp
src/cl/: aplusb.cl  bitonic.cl  mandelbrot.cl  matrix_multiplication_0.cl  matrix_multiplication_1.cl  matrix_multiplication_2.cl  matrix_transpose.cl  merge.cl  prefix_sum.cl  radix.cl  sum_base.cl  sum_coalesced.cl  sum_cycle.cl  sum_local_mem.cl  sum_tree.cl
src/cl/h/: description.txt
